--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "C:\\Program Files\\Python37\\python.exe",
+    "python.pythonPath": "C:\\Users\\Andrew\\AppData\\Local\\Programs\\Python\\Python39\\python.exe",
     "python.linting.enabled": false
 }
